--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "help-desk",
   "private": true,
   "dependencies": {
+    "@activeadmin/activeadmin": "^2.9.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "arctic_admin": "^4.0.1",
     "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
     "turbolinks": "^5.2.0",
