--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@activeadmin/activeadmin": "^2.9.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@hotwired/turbo-rails": "^7.0.0-rc.1",
     "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -12,7 +13,7 @@
     "arctic_admin": "^4.0.1",
     "bootstrap": "^5.1.0",
     "jquery": "^3.6.0",
-    "turbolinks": "^5.2.0",
+    "stimulus": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
