--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@rails/webpacker": "5.4.0",
     "arctic_admin": "^4.0.1",
     "bootstrap": "^5.1.0",
+    "bootstrap-icons": "^1.5.0",
     "jquery": "^3.6.0",
     "stimulus": "^2.0.0",
     "webpack": "^4.46.0",
